--- a/public/index.html
+++ b/public/index.html
@@ -10,7 +10,7 @@
   <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
   <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
   <link rel="stylesheet" href=".src/index.css">
-  <title>React App</title>
+  <title>Music Sub-card</title>
   <style>
     body {
       background: #e0e8ff !important;
